Added button loop

--- a/src/index/index.html
+++ b/src/index/index.html
@@ -8,6 +8,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 </head>
 <body>
-    <div id="firstBox"></div>
+    <div class="slider" id="firstBox"></div>
 </body>
 </html>
